ch20/coffee-shop-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: coffee-shop
  labels:
    app: coffee-shop
    role: backend
spec:
  containers:
  - name: nginx
    image: nginx:1.25.3-alpine
    ports:
    - containerPort: 80
