ch20/grocery-store-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grocery-store
  labels:
    app: grocery-store
    role: backend
spec:
  containers:
  - name: nginx
    image: nginx:1.25.3-alpine
    ports:
    - containerPort: 80
