ch20/metrics-api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: metrics-api
  namespace: internal-tools
  labels:
    app: api
spec:
  containers:
  - name: nginx
    image: nginx:1.25.3-alpine
    ports:
    - containerPort: 80
