ch20/metrics-consumer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: metrics-consumer
  namespace: internal-tools
  labels:
    app: consumer
spec:
  containers:
  - name: nginx
    image: nginx:1.25.3-alpine
    ports:
    - containerPort: 80
