ch20/payment-processor-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: payment-processor
  labels:
    app: payment-processor
    role: api
spec:
  containers:
  - name: nginx
    image: nginx:1.25.3-alpine
    ports:
    - containerPort: 80
